tests/correctness/src/miniboxing/tests/compile/mb_normalize_9.check
newSource1.scala:9: error: The method overrideMe in class Norm2 overrides method overrideMe in class Norm1 therefore needs to have the follwing type parameters marked with @minispec: type B.
  override def overrideMe[@minispec A, B, @minispec C](a: A, b: B, c: C): A = ???
               ^
[Now checking: minibox]